--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello! I've started ESMT Coding Bootcamp!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Sofia, Bulgaria</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Reading books, watching TV series, travelling, enjoying good food</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>A singer :)</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Berlin. Germany</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>This is the future</p>
     </section>
 
     <footer id="footer">
